--- a/style.css
+++ b/style.css
@@ -168,6 +168,7 @@ body {
   object-fit: contain;
   border: 1px solid rgba(160, 160, 160, 0.5);
   border-radius: 6px;
+  background-color: #fff;
 }
 .footer-copy-wrapper {
   margin-top: 20px;
@@ -233,6 +234,7 @@ body {
   object-fit: contain;
   border: 1px solid rgba(160, 160, 160, 0.5);
   border-radius: 6px;
+  background-color: #fff;
 }
 .profile-sns-text {
   font-size: 15px;
