--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@ body {
   margin-top: 30px;
 }
 .illust-img img {
+  cursor: default;
   width: 100%;
   aspect-ratio: 1 / 1;
   object-fit: contain;
