--- a/style.css
+++ b/style.css
@@ -21,14 +21,13 @@ body {
 .header-logo {
   display: flex;
   justify-content: center;
-  /* 仮 */
-  font-size: 28px;
-  font-weight: bold;
 }
-.header-nav {
-  margin-top: 10px;
+.header-logo img {
+  height: 70px;
+  object-fit: contain;
 }
 .header-nav-list {
+  margin-top: 10px
   display: flex;
   justify-content: center;
   gap: 30px;
@@ -89,7 +88,7 @@ body {
 /* トップページ */
 /* carousel */
 .carousel {
-  margin-top: 91px;
+  margin-top: 121px;
   padding: 40px 0;
   background-color: #fefbfb;
 }
@@ -151,14 +150,11 @@ body {
   padding: 20px;
 }
 .footer-logo {
-  /* 仮 */
   font-size: 28px;
   font-weight: bold;
 }
-.footer-nav {
-  margin-top: 10px;
-}
 .footer-nav-list {
+  margin-top: 10px;
   display: flex;
   justify-content: center;
   gap: 20px;
@@ -182,7 +178,7 @@ body {
 }
 /* profileセクション */
 .profile {
-  margin-top: 91px;
+  margin-top: 121px;
   padding: 40px 0 80px;
   background-color: #fefbfb;
 }
@@ -196,7 +192,7 @@ body {
   border-radius: 10px;
 }
 .profile-text-contents {
-  margin-top: 30px;
+  margin-top: 40px;
   text-align: left;
 }
 .profile-text-main {
@@ -242,12 +238,12 @@ body {
 }
 /* galleryセクション */
 .gallery {
-  margin-top: 91px;
+  margin-top: 121px;
   padding: 40px 0 80px;
   background-color: #fefbfb;
 }
 .gallery-year-wrapper + .gallery-year-wrapper {
-  margin-top: 60px;
+  margin-top: 80px;
 }
 .gallery-year-heading {
   display: flex;
@@ -314,11 +310,11 @@ body {
     align-items: center;
     max-width: 1080px;
   }
-  .header-logo {
-    /* 仮 */
-    font-size: 34px;
+  .header-logo img {
+    height: 90px;
   }
   .header-nav-list {
+    margin-top: 30px;
     gap: 40px;
   }
   .header-nav-item {
@@ -353,7 +349,7 @@ body {
   /* トップページ */
   /* carousel */
   .carousel {
-    margin-top: 90px;
+    margin-top: 131px;
     padding: 60px 0;
   }
   .carousel .inner {
@@ -391,14 +387,17 @@ body {
   .footer {
     padding: 40px;
   }
+  .footer-wrapper {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    align-items: center;
+  }
   .footer-logo {
-    /* 仮 */
     font-size: 34px;
   }
-  .footer-nav {
-    margin-top: 20px;
-  }
   .footer-nav-list {
+    margin-bottom: 5px;
     gap: 30px;
   }
   .footer-nav-link img {
@@ -414,7 +413,7 @@ body {
   }
   /* profileセクション */
   .profile {
-    margin-top: 90px;
+    margin-top: 131px;
     padding: 60px 0 120px;
   }
   .profile-list {
@@ -469,11 +468,11 @@ body {
     font-size: 18px;
   }/* galleryセクション */
   .gallery {
-    margin-top: 90px;
+    margin-top: 131px;
     padding: 60px 0 120px;
   }
   .gallery-year-wrapper + .gallery-year-wrapper {
-    margin-top: 80px;
+    margin-top: 120px;
   }
   .gallery-year-heading {
     gap: 10px;
