--- a/style.css
+++ b/style.css
@@ -153,8 +153,10 @@ body {
   font-size: 28px;
   font-weight: bold;
 }
-.footer-nav-list {
+.footer-nav {
   margin-top: 10px;
+}
+.footer-nav-list {
   display: flex;
   justify-content: center;
   gap: 20px;
@@ -165,7 +167,6 @@ body {
   object-fit: contain;
   border: 1px solid rgba(160, 160, 160, 0.5);
   border-radius: 6px;
-  background-color: #fff;
 }
 .footer-copy-wrapper {
   margin-top: 20px;
@@ -231,7 +232,6 @@ body {
   object-fit: contain;
   border: 1px solid rgba(160, 160, 160, 0.5);
   border-radius: 6px;
-  background-color: #fff;
 }
 .profile-sns-text {
   font-size: 15px;
@@ -243,7 +243,7 @@ body {
   background-color: #fefbfb;
 }
 .gallery-year-wrapper + .gallery-year-wrapper {
-  margin-top: 80px;
+  margin-top: 60px;
 }
 .gallery-year-heading {
   display: flex;
@@ -314,7 +314,6 @@ body {
     height: 90px;
   }
   .header-nav-list {
-    margin-top: 30px;
     gap: 40px;
   }
   .header-nav-item {
@@ -396,8 +395,10 @@ body {
   .footer-logo {
     font-size: 34px;
   }
+  .footer-nav {
+    margin-top: 20px;
+  }
   .footer-nav-list {
-    margin-bottom: 5px;
     gap: 30px;
   }
   .footer-nav-link img {
