--- a/style.css
+++ b/style.css
@@ -37,10 +37,22 @@ body {
 }
 .header-nav-link {
   padding: 5px;
-  transition: all 0.7s;
+  transition: all 0.3s;
 }
 .header-nav-link:hover {
-  color: rgba(160, 160, 160, 0.5);
+  color: rgba(160, 160, 160, 0.7);
+}
+.header-nav-link::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: rgba(160, 160, 160, 0.7);
+  transition: all 0.3s;
+  transform: scale(0, 1);
+  transform-origin: center top;
 }
 /* 共通クラス */
 .inner {
