--- a/style.css
+++ b/style.css
@@ -54,6 +54,9 @@ body {
   transform: scale(0, 1);
   transform-origin: center top;
 }
+.header-nav-link:hover::after {
+  transform: scale(1, 1);
+}
 /* 共通クラス */
 .inner {
   padding: 0 50px;
