--- a/style.css
+++ b/style.css
@@ -39,6 +39,9 @@ body {
   padding: 5px;
   transition: all 0.3s;
 }
+.current {
+  color: rgba(160, 160, 160, 1);
+}
 .header-nav-link:hover {
   color: rgba(160, 160, 160, 0.7);
 }
@@ -53,6 +56,9 @@ body {
   transition: all 0.3s;
   transform: scale(0, 1);
   transform-origin: center top;
+}
+.current::after {
+  transform: scale(1, 1);
 }
 .header-nav-link:hover::after {
   transform: scale(1, 1);
