--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   z-index: 20;
   text-align: center;
   padding: 10px;
-  border-bottom: 1px solid rgba(160, 160, 160, 0.2);
+  border-bottom: 1px solid rgba(160, 160, 160, 0.3);
 }
 .header-logo {
   display: flex;
@@ -38,6 +38,7 @@ body {
 .header-nav-link {
   padding: 5px;
   transition: all 0.3s;
+  position: relative;
 }
 .current {
   color: rgba(160, 160, 160, 1);
@@ -152,7 +153,7 @@ body {
 .illust-btn {
   display: inline-block;
   padding: 8px 10px;
-  margin: 30px auto 0;
+  margin: 40px auto 0;
   border: 1px solid rgba(100, 100, 100, 0.7);
   border-radius: 8px;
   transition: all 0.7s;
@@ -164,7 +165,7 @@ body {
 }
 /* フッター */
 .footer {
-  border-top: 1px solid rgba(160, 160, 160, 0.2);
+  border-top: 1px solid rgba(160, 160, 160, 0.3);
   background-color: #f0fcfa;
   text-align: center;
   padding: 20px;
@@ -173,10 +174,8 @@ body {
   font-size: 28px;
   font-weight: bold;
 }
-.footer-nav {
-  margin-top: 10px;
-}
 .footer-nav-list {
+  margin-top: 10px;
   display: flex;
   justify-content: center;
   gap: 20px;
@@ -187,6 +186,7 @@ body {
   object-fit: contain;
   border: 1px solid rgba(160, 160, 160, 0.5);
   border-radius: 6px;
+  background-color: #fff;
 }
 .footer-copy-wrapper {
   margin-top: 20px;
@@ -252,6 +252,7 @@ body {
   object-fit: contain;
   border: 1px solid rgba(160, 160, 160, 0.5);
   border-radius: 6px;
+  background-color: #fff;
 }
 .profile-sns-text {
   font-size: 15px;
@@ -263,7 +264,7 @@ body {
   background-color: #fefbfb;
 }
 .gallery-year-wrapper + .gallery-year-wrapper {
-  margin-top: 60px;
+  margin-top: 80px;
 }
 .gallery-year-heading {
   display: flex;
@@ -354,6 +355,7 @@ body {
     height: 90px;
   }
   .header-nav-list {
+    margin-top: 30px;
     gap: 40px;
   }
   .header-nav-item {
@@ -417,7 +419,7 @@ body {
     border-radius: 15px;
   }
   .illust-btn {
-    padding: 14px 16px;
+    padding: 10px 12px;
     margin: 60px auto 0;
     font-size: 20px;
   }
@@ -434,10 +436,8 @@ body {
   .footer-logo {
     font-size: 34px;
   }
-  .footer-nav {
-    margin-top: 20px;
-  }
   .footer-nav-list {
+    margin-bottom: 5px;
     gap: 30px;
   }
   .footer-nav-link img {
@@ -506,7 +506,8 @@ body {
   }
   .profile-sns-text {
     font-size: 18px;
-  }/* galleryセクション */
+  }
+  /* galleryセクション */
   .gallery {
     margin-top: 131px;
     padding: 60px 0 120px;
