--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 2px;
+  height: 1px;
   background-color: rgba(160, 160, 160, 0.7);
   transition: all 0.3s;
   transform: scale(0, 1);
@@ -364,6 +364,9 @@ body {
   .header-nav-link {
     padding: 10px;
     font-size: 20px;
+  }
+  .header-nav-link::after {
+    height: 2px;
   }
   /* 共通クラス */
   .inner {
